Move app over to openapi generated code
