# pkg/types/developer.go
@@ -1,48 +1,48 @@
 package types
 
 // Developer contains everything about a Developer
-//
-// Field validation (binding) is done using https://godoc.org/github.com/go-playground/validator
-type Developer struct {
-	// Id of developer (not changable)
-	DeveloperID string
+type (
+	Developer struct {
+		// Id of developer (not changable)
+		DeveloperID string
 
-	// Status of developer (should be "approved" to allow access)
-	Status string
+		// Status of developer (should be "approved" to allow access)
+		Status string
 
-	// Name of developer applications of this developer
-	Apps StringSlice
+		// Name of developer applications of this developer
+		Apps []string
 
-	// Attributes of developer
-	Attributes Attributes
+		// Attributes of developer
+		Attributes Attributes
 
-	// Email address
-	Email string
+		// Email address
+		Email string
 
-	// Username
-	UserName string
+		// Username
+		UserName string
 
-	// First name
-	FirstName string
+		// First name
+		FirstName string
 
-	// Last name
-	LastName string
+		// Last name
+		LastName string
 
-	// Created at timestamp in epoch milliseconds
-	CreatedAt int64
+		// Created at timestamp in epoch milliseconds
+		CreatedAt int64
 
-	// Name of user who created this organiz
-	CreatedBy string
+		// Name of user who created this organiz
+		CreatedBy string
 
-	// Last modified at timestamp in epoch milliseconds
-	LastModifiedAt int64
+		// Last modified at timestamp in epoch milliseconds
+		LastModifiedAt int64
 
-	// Name of user who last updated this developer
-	LastModifiedBy string
-}
+		// Name of user who last updated this developer
+		LastModifiedBy string
+	}
 
-// Developers holds one or more developers
-type Developers []Developer
+	// Developers holds one or more developers
+	Developers []Developer
+)
 
 var (
 	// NullDeveloper is an empty developer type
@@ -52,20 +52,22 @@ var (
 	NullDevelopers = Developers{}
 )
 
+const (
+	developerStatusActive   = "active"
+	developerInStatusActive = "inactive"
+)
+
 // Activate marks a developer as approved
 func (d *Developer) Activate() {
-
-	d.Status = "active"
+	d.Status = developerStatusActive
 }
 
 // Deactivate marks a developer as inactive
 func (d *Developer) Deactivate() {
-
-	d.Status = "inactive"
+	d.Status = developerInStatusActive
 }
 
 // IsActive returns true in case developer's status is active
 func (d *Developer) IsActive() bool {
-
-	return d.Status == "active"
+	return d.Status == developerStatusActive
 }
