# pkg/types/developerapp.go
@@ -1,42 +1,48 @@
 package types
 
 // DeveloperApp contains everything about a Developer Application
-//
-// Field validation (binding) is done using https://godoc.org/github.com/go-playground/validator
-type DeveloperApp struct {
-	// Id of developer app (not changable)
-	AppID string
+type (
+	DeveloperApp struct {
+		// Id of developer app (not changable)
+		AppID string
 
-	// Id of developer (not changable)
-	DeveloperID string
+		// Id of developer (not changable)
+		DeveloperID string
 
-	// Activation status of developer application
-	Status string
+		// Activation status of developer application
+		Status string
 
-	// Attributes of developer application
-	Attributes Attributes
+		// Attributes of developer application
+		Attributes Attributes
 
-	// Name of developer application
-	Name string
+		// Name of developer application
+		Name string
 
-	// Friendly name of developer app
-	DisplayName string
+		// Friendly name of developer app
+		DisplayName string
 
-	// Created at timestamp in epoch milliseconds
-	CreatedAt int64
+		// OAuth scopes
+		Scopes []string
 
-	// Name of user who created this app
-	CreatedBy string
+		// OAuth call back URL
+		CallbackUrl string
 
-	// Last modified at timestamp in epoch milliseconds
-	LastModifiedAt int64
+		// Created at timestamp in epoch milliseconds
+		CreatedAt int64
 
-	// Name of user who last updated this app
-	LastModifiedBy string
-}
+		// Name of user who created this app
+		CreatedBy string
 
-// DeveloperApps holds one or more developer apps
-type DeveloperApps []DeveloperApp
+		// Last modified at timestamp in epoch milliseconds
+		LastModifiedAt int64
+
+		// Name of user who last updated this app
+		LastModifiedBy string
+	}
+
+	// DeveloperApps holds one or more developer apps
+	DeveloperApps []DeveloperApp
+)
 
 var (
 	// NullDeveloperApp is an empty developer app type
@@ -45,3 +51,26 @@ var (
 	// NullDeveloperApps is an empty developer app slice
 	NullDeveloperApps = DeveloperApps{}
 )
+
+const (
+	applicationStatusApproved = "approved"
+	applicationStatusRevoked  = "revoked"
+)
+
+// Activate marks a developer as approved
+func (d *DeveloperApp) Approve() {
+
+	d.Status = applicationStatusApproved
+}
+
+// Deactivate marks a developer as inactive
+func (d *DeveloperApp) Revoke() {
+
+	d.Status = applicationStatusRevoked
+}
+
+// IsActive returns true in case developer's status is active
+func (d *DeveloperApp) IsActive() bool {
+
+	return d.Status == applicationStatusApproved
+}
